MAUI app can be built for DEV or LIVE

--- a/TeamVote/Properties/launchSettings.json
+++ b/TeamVote/Properties/launchSettings.json
@@ -1,8 +1,14 @@
 ﻿{
-  "profiles": {
-    "Windows Machine": {
-      "commandName": "MsixPackage",
-      "nativeDebugging": false
-    }
-  }
+   "profiles": {
+      "Windows LIVE": {
+         "commandName": "MsixPackage",
+         "nativeDebugging": false,
+         "commandLineArgs": "LIVE"
+      },
+      "Windows DEV": {
+         "commandName": "MsixPackage",
+         "nativeDebugging": false,
+         "commandLineArgs": "DEV"
+      }
+   }
 }
