--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,5 +31,9 @@ jobs:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
                   BRANCH: gh-pages
                   FOLDER: release/wwwroot
+
+            # changes the base-tag in index.html from '/' to 'TeamVote' to match GitHub Pages repository subdirectory
+            - name: Change base-tag in index.html from / to TeamVote
+              run: sed -i 's/<base href="\/" \/>/<base href="\/TeamVote\/" \/>/g' release/wwwroot/index.html
                   
 # Based on https://swimburger.net/blog/dotnet/how-to-deploy-aspnet-blazor-webassembly-to-github-pages
